# snap-demo-cpp

./: CMakeLists.txt  README.md
snap/: snapcraft.yaml
src/: CMakeLists.txt  main.cpp  test.cpp
tests/: thread_test.cpp
